<resources>
    <string name="app_name">Beba água!</string>
    <string name="title_btn_back">Voltar</string>
    <string name="title_btn_register">Registrar</string>
    <string name="title_btn_drinkwater">Beber água</string>
    <string name="title_login">Login</string>
    <string name="title_input_email">Email</string>
    <string name="hint_input_email">email@email.com</string>
    <string name="hint_input_password">*******</string>
    <string name="title_btn_dontrememberpasswaord">Esqueceu a senha?</string>
    <string name="title_btn_signup">Cadastrar</string>
    <string name="title_btn_newuser">Novo por aqui? Cadastre-se!</string>
    <string name="title_button_enter">Entrar</string>
    <string name="title_button_sendemail">Enviar email</string>
    <string name="description_forgetpassword">Digite seu email de cadastro, para que possamos enviar um email de recuperacação de senha.</string>
    <string name="title_signup">Cadastro</string>
    <string name="subtitle_password">Senha</string>
    <string name="subtitle_nickname">Apelido</string>
    <string name="hint_edt_nickname">Apelido</string>
    <string name="title_input_password">Password</string>

    <array name="water_quantity">
        <item>200ml</item>
        <item>300ml</item>
        <item>400ml</item>
        <item>500ml</item>
        <item>600ml</item>
        <item>700ml</item>
        <item>800ml</item>
    </array>

    <array name="water_goal">
        <item>3lt</item>
        <item>4lt</item>
        <item>5lt</item>
        <item>6lt</item>
    </array>
</resources>