<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutSignupScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_signup_scene"
    tools:context=".feature.view.modules.auth.signupscreen.SignUpFragment">

    <ImageView
        android:id="@+id/firstTopGeometry"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="-120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_svgtop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/secondTopGeometry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-120dp"
        android:src="@drawable/ic_svgtop2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnArrowBack"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

    <TextView
        android:id="@+id/tvTitleSignUp"
        style="@style/title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/title_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstTopGeometry" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitleSignUp">

        <TextView
            style="@style/subtitle"
            android:text="@string/subtitle_nickname" />

        <EditText
            android:id="@+id/edtNickname"
            style="@style/edt_input"
            android:hint="@string/hint_edt_nickname"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/subtitle"
            android:layout_marginTop="18dp"
            android:text="@string/title_input_email" />

        <EditText
            android:id="@+id/edtEmail"
            style="@style/edt_input"
            android:hint="@string/hint_input_email"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/subtitle"
            android:layout_marginTop="18dp"
            android:text="@string/subtitle_password" />

        <EditText
            android:id="@+id/edtPassword"
            style="@style/edt_input"
            android:hint="@string/hint_input_password"
            android:inputType="textPassword" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_button_stroke_white"
        android:fontFamily="@font/nunitobold"
        android:paddingHorizontal="8dp"
        android:text="@string/title_btn_signup"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/bottomGeometry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        android:src="@drawable/ic_svgbottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.motion.widget.MotionLayout>