<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutLoginScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_login_scene"
    tools:context=".feature.presentation.modules.auth.loginscreen.LoginFragment">

    <ImageView
        android:id="@+id/firstTopGeometry"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="-120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_svgtop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/secondTopGeometry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-120dp"
        android:src="@drawable/ic_svgtop2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleLogin"
        style="@style/title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/title_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstTopGeometry" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitleLogin">

        <TextView
            style="@style/subtitle"
            android:text="@string/title_input_email" />

        <EditText
            android:id="@+id/edtEmail"
            style="@style/edt_input"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_input_email" />

        <TextView
            style="@style/subtitle"
            android:layout_marginTop="18dp"
            android:text="@string/title_input_email" />

        <EditText
            android:id="@+id/edtPassword"
            style="@style/edt_input"
            android:inputType="textPassword"
            android:hint="@string/hint_input_password" />

        <TextView
            android:id="@+id/btnForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/nunitobold"
            android:text="@string/title_btn_dontrememberpasswaord"
            android:textAlignment="textEnd"
            android:textColor="@color/bluebold" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignin"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_button_stroke_white"
        android:fontFamily="@font/nunitobold"
        android:text="@string/title_button_enter"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSignUp" />

    <ImageView
        android:id="@+id/bottomGeometry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        android:src="@drawable/ic_svgbottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/nunitobold"
        android:text="@string/title_btn_signup"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/bottomGeometry"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>