<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutForgotPassowordScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_fotgotpassword_scene"
    tools:context=".feature.presentation.modules.auth.forgotpasswordscreen.ForgotPasswordFragment">

    <ImageView
        android:id="@+id/firstTopGeometry"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="-120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_svgtop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstTopGeometry">

        <TextView
            style="@style/subtitle"
            android:layout_marginBottom="16dp"
            android:text="@string/description_forgetpassword" />

        <TextView
            style="@style/subtitle"
            android:text="@string/title_input_email" />

        <EditText
            android:id="@+id/edtEmail"
            style="@style/edt_input"
            android:hint="@string/hint_input_email"
            android:inputType="textEmailAddress" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunitobold"
            android:text="@string/title_button_sendemail"
            android:textAllCaps="false"
            android:textSize="24dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/secondTopGeometry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-120dp"
        android:src="@drawable/ic_svgtop2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoBack"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_button_stroke_white"
        android:fontFamily="@font/nunitobold"
        android:text="@string/title_btn_back"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageView
        android:id="@+id/bottomGeometry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-50dp"
        android:src="@drawable/ic_svgbottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>